--- a/src/App.css
+++ b/src/App.css
@@ -182,6 +182,22 @@ audio {
   margin-bottom: 20px;
 }
 
+
+.downloadIcon {
+  width: 25px;
+  height: auto; 
+  position: absolute;
+  bottom: 15px;
+  right: 10px;
+  cursor: pointer;
+  transition: border-color 0.25s;
+  z-index: 10; /* Higher than card layers */
+}
+
+.downloadIcon:hover {
+  width: 30px;
+}
+
 /* Help Page */
 .helpPage {
   font-family: 'OpenDyslexic';
