--- a/src/App.css
+++ b/src/App.css
@@ -568,17 +568,88 @@ select {
   background: white;
   border-radius: 10px;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
-  padding: 20px;
+  padding: 0 !important;
   width: 500px; 
   max-width: 90%;
+  margin: auto;
 }
+
+
+.logout-modal {
+  top: 20%;  /* Adjust this value to move the modal higher or lower */
+  left: 50%;
+}
+
 
 .modal-header, .modal-footer {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  padding: 10px;
 }
+
+.modal-header {
+  background-color: #c1ff72;
+  padding-bottom: 5px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.modal-title {
+  align-items: center;
+  font-weight: bold;
+  font-size: large;
+  padding-top: 4px;
+  letter-spacing: 0.25px;
+}
+
+.modal-body {
+  padding: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.modal-footer {
+  justify-content: center;
+  gap: 50px;
+}
+
+.modal-footer .btn {
+  background-color: #c1ff72;
+}
+
+
+.modal-footer .btn-secondary {
+  background-color: #d2fc9b;
+}
+
+/*
+.modal-footer .btn-primary {
+  background-color: rgb(249, 221, 225);
+}
+*/
 
 .modal-backdrop {
   background-color: rgba(0, 0, 0, 0.5);
+}
+
+
+.export-all-button {
+  margin-top: 20px;
+  border-radius: 20px;
+  text-align: center;
+  font-size: large;
+  border: 2px solid transparent;
+  font-weight: 500;
+  cursor: pointer;
+  transition: border-color 0.25s;
+  font-family: "League Spartan", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: #c1ff72;
+  align-items: center;
+}
+
+.export-all-button:hover {
+  border-color: #00ccff;
 }
