--- a/src/App.css
+++ b/src/App.css
@@ -31,8 +31,17 @@
   font-size: 1.5em;
 }
 
-.learnMore h1, .learnMore h2, .learnMore p {
+.learnMore h1, .learnMore h2 {
   font-family: 'OpenDyslexic';
+}
+
+.learnIntents h2 {
+  margin-bottom: 10px;
+}
+
+.learnMore p {
+  margin-top: 0px;
+  font-size: large;
 }
 
 .learnMore h2, .learnMore p {
@@ -48,16 +57,18 @@
 .learnMore h3 {
   font-family: 'OpenDyslexic';
   text-align: left;
+  margin-bottom: 10px;
 }
 
-ol {
-  font-family: 'OpenDyslexic';
+.learnCategories ol {
   text-align: left;
+  font-size: large;
+  margin-top: 0;
 }
 
 ul {
   list-style-type: none;
-  font-family: 'OpenDyslexic';
+  font-size: large;
 }
 
 .button {
@@ -653,4 +664,17 @@ select {
 
 .export-all-button:hover {
   border-color: #00ccff;
+}
+
+
+.record-button {
+  border-radius: 20px;
+  text-align: center;
+  border: 2px solid transparent;
+  font-weight: 500;
+  cursor: pointer;
+  transition: border-color 0.25s;
+  font-family: "League Spartan", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: #c1ff72;
+  align-items: center;
 }
